@@ -1,3 +1,7 @@
+2010-9-24 Yu-Sung Su     <ys463@columbia.edu>  
+    * R/bayesglm: fix a bug when a model of one predictor with no intercept is fitted
+
+
 2010-6-28 Yu-Sung Su     <ys463@columbia.edu>  
     * R/extractDIC: add s3 methods for extractDIC and extractAIC for the mer class
     * Rd/extractDIC
